--- a/index.html
+++ b/index.html
@@ -10,11 +10,28 @@
 <body>
 
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="index.html">Homepage</a></li>
+  <li><a href="summary.html">Summary</a></li>
+  <li><a href="#contact">Ranking</a></li>
+  
 </ul>
+<h1>The big three are very popular but only one can be the best.</h1>
+  <img src="images/wp6345324.webp"alt="OP" width="60%" height="60%">
+<p>One Piece-The series focuses on Monkey D. Luffy, a young man made of rubber, who, inspired by his childhood idol, the powerful pirate Red-Haired Shanks, sets off on a journey from the East Blue Sea to find the mythical treasure, the One Piece, and proclaim himself the King of the Pirates.</p>
+<br>
+<img src="images/135637.jpg"alt="Naruto" width="60%" height="60%">
+<p>Naruto Uzumaki, is a loud, hyperactive, adolescent ninja who constantly searches for approval and recognition, as well as to become Hokage, who is acknowledged as the leader and strongest of all ninja in the village.</p>
+<br>
+<img src="images/R (2).jpg"alt="Naruto" width="60%" height="60%">
+<p>Bleach (stylized as BLEACH) is a Japanese manga series written and illustrated by Tite Kubo. It follows the adventures of a teenager Ichigo Kurosaki, who inherits his parents' destiny after he obtains the powers of a Soul Reaper —a death personification similar to the Grim Reaper —from another Soul Reaper, Rukia Kuchiki.</p>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
