--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-
+<body style="background-image: url(images/Big\ Three);">
+ 
 <ul>
   <li><a class="active" href="index.html">Homepage</a></li>
   <li><a href="summary.html">Summary</a></li>
-  <li><a href="#contact">Ranking</a></li>
-  
+  <li><a href="ranking.html">Ranking</a></li>
+ 
 </ul>
-<h1>The big three are very popular but only one can be the best.</h1>
+<h1>The Big Three are very popular but only one can be the best.</h1>
+  
+   <button><a href="page4.html"> Ghost of the Uchiha</a></button>
   <img src="images/wp6345324.webp"alt="OP" width="60%" height="60%">
+    
+<button><a href="page5.html"> Aizen soloing</a></button>
 <p>One Piece-The series focuses on Monkey D. Luffy, a young man made of rubber, who, inspired by his childhood idol, the powerful pirate Red-Haired Shanks, sets off on a journey from the East Blue Sea to find the mythical treasure, the One Piece, and proclaim himself the King of the Pirates.</p>
 <br>
 <img src="images/135637.jpg"alt="Naruto" width="60%" height="60%">
@@ -24,7 +28,9 @@
 <br>
 <img src="images/R (2).jpg"alt="Naruto" width="60%" height="60%">
 <p>Bleach (stylized as BLEACH) is a Japanese manga series written and illustrated by Tite Kubo. It follows the adventures of a teenager Ichigo Kurosaki, who inherits his parents' destiny after he obtains the powers of a Soul Reaper —a death personification similar to the Grim Reaper —from another Soul Reaper, Rukia Kuchiki.</p>
-
+<audio controls autoplay loop class="tree"
+  <source src="images/One Piece Opening 1 HD 720p   Special Edition We Are! (128 kbps).mp3">
+</audio>
 
 
 
