--- a/summary.html
+++ b/summary.html
@@ -11,13 +11,42 @@
   <ul>
   <li><a class="active" href="index.html">Homepage</a></li>
   <li><a class="active" href="summary.html">Summary</a></li>
-  <li><a href="#contact">Ranking</a></li>
-
+  <li><a href="ranking.html">Ranking</a></li>
 </ul>
-<h1>These series have been around for many years and continue to be popular today. Although these three anime were created for a wide audience, each one has its unique appeal that anyone can enjoy.</h1>
+ 
+
+    <h1>These series have been around for many years and continue to be popular today. Although these three anime were created for a wide audience, each one has its unique appeal that anyone can enjoy.</h1>
 
 
-  
+<div class="pic1">
+  <a target="_blank" href="img_5terre.jpg">
+    <img src="images/OIP (3).jpg" alt="Cinque Terre" width="400" height="400">
+  </a>
+  <div class="desc">Best Bleach villain</div>
+</div>
 
+<div class="pic2">
+  <a target="_blank" href="img_forest.jpg">
+    <img src="images/ef219f434c8abeb84fad0341634eeed12de590de_hq.jpg" alt="Forest" width="400" height="400">
+  </a>
+  <div class="desc">Best Naruto Villain</div>
+</div>
+
+<div class="pic3">
+  <a target="_blank" href="images/unnamed.jpg">
+    <img src="images/unnamed.jpg" alt="Northern Lights" width="400" height="400">
+  </a>
+  <div class="desc">Best One Piece Villain</div>
+</div>
+
+<div class="pic4">
+  <a target="_blank" href="images/Akatsuki-Ranked.webp">
+    <img src="images/Akatsuki-Ranked.webp" alt="Mountains" width="450" height="400">
+  </a>
+  <div class="desc">Best big three villain group</div>
+</div>
+  <audio controls autoplay loop class="tree">
+  <source src="images/Bleach Opening 1 HD (128 kbps).mp3">
+    </audio>
 </body>
 </html>
